--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>ResumeBuilder</title>
-  <base href="/ResumeBuilder7777">
+  <base href="https://ajitkamble20.github.io/ResumeBuilder7777/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
